--- a/css/twitter.css
+++ b/css/twitter.css
@@ -96,19 +96,19 @@ a {
 .profile-details {
     float: left;
     margin: 0em .5em 0em .5em;
-    width: calc(25% - .5em);
+    width: calc(25% - 1em);
 }
 
 .timeline {
     float: left;
     margin: 0em .5em 0em .5em;
-    width: calc(50% - .5em);
+    width: calc(50% - 1em);
 }
 
 .who-to-follow {
    float: right;
     margin: 0em .5em 0em .5em
-    width: calc(25% - .5em);
+    width: calc(25% - 1em);
 }
 
 .container {
@@ -120,7 +120,7 @@ a {
     background-color: white;
     border-bottom: 1px solid var(--separator-color);
     padding: .5em;
-    overflow: scroll;
+    overflow: hidden;
 
 }
 
@@ -132,7 +132,7 @@ a {
 
 .media-body {
     float: left;
-    width: calc(100% - 132px);
+    width: calc(100% - 50px);
 }
 
 .profile-items {
