--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -13,26 +13,31 @@
 
 
 /*Mobile site css */
-@media screen and (max-width:550px) {
+@media screen and (max-width:768px) {
 
     * {
         font-family: sans-serif;
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 1.5em;
     }
 
     h1 {
         font-size: 3em;
         text-align: center;
-        margin: 1em;
-        width: calc(100% - 2em);
+        /*margin: 1em;*/
+        /*width: calc(100% - 2em);*/
     }
 
-    img {
-        /* height: 224px;
-         width: 339px; */
-        margin: 1em;
-        width: calc(100% - 2em);
+    /*img {*/
 
-    }
+        /*margin: 0;*/
+        /*padding: 0;*/
+
+
+    /*}*/
 
     .alert-info {
         color: black;
@@ -44,20 +49,21 @@
         display: inline-block;
         text-align: center;
         line-height: 40px;
-        margin: 1em;
-        width: calc(100% - 2em);
+        /*margin: 1em;*/
+        /*!*width: calc(100% - 2em);*!*/
 
     }
 
     .nav-links {
+
         margin: 0;
         padding: 0;
 
     }
 
     .nav-links > li {
-        margin: .3em 1em .3em 1em;
-        width: calc(100% - 2em);
+        /*margin: .3em 1em .3em 1em;*/
+        /*width: calc(100% - 2em);*/
         box-sizing: border-box;
         height: 3em;
         list-style: none;
@@ -74,28 +80,25 @@
         width: calc(100% - 2em); */
     /*}*/
     .main p {
-        margin: 0 1em 0 0;
+        margin: 0;
         text-align: justify;
-        width: calc(100% - 1em);
+
     }
 
     .main {
         padding-bottom: 1em;
-        margin: 1em;
-        width: calc(100% - 1em);
+        margin: 0;
     }
 
     .sub-section {
         font-style: italic;
-        padding: 0 0 7em 0;
-        margin: 1em;
-        width: calc(100% - 1em);
+
     }
 
     .sub-section p {
-        margin: 0 1em 0 0;
+
         text-align: justify;
-        width: calc(100% - 1em);
+
 
     }
 
@@ -111,16 +114,22 @@
 /* desktop site css */
 
 
-@media screen and (min-width:550px) {
+@media screen and (min-width:768px) {
 
     * {
       font-family: sans-serif;
-        margin: .5em;
+
+    }
+
+
+
+    body {
+        margin: 3em;
     }
 
     h1 {
         text-align: left;
-        margin: .5em;
+
 
     }
 
@@ -132,36 +141,36 @@
     .nav-links {
         margin:0;
         list-style: none;
-        text-align: right;
         padding-bottom: 2em;
+        text-align: right;
 
     }
 
-    .nav-links > li {
+   .nav-links > li {
         display: inline-block;
         background: none;
+
+
     }
 
     .main {
-        width: 60%;
+        /*width: 60%;*/
         float: left;
+        padding-right: .5em;
 
 
     }
 
     .sub-section {
-        width: 30%;
+        /*width: 30%;*/
         float: right;
+        padding-left: .5em;
     }
 
 .header-img {
-    width: calc(100% - 2em);
+    /*width: calc(100% - 2em);*/
 }
 
     }
 
-    footer {
-        display: none;
-
-    }
 
