--- a/css/grid-layout.css
+++ b/css/grid-layout.css
@@ -2,6 +2,13 @@
     box-sizing: border-box;
 }
 
+.container {
+    width: 80%;
+    margin: 0 auto;
+    max-width: 1200px;
+
+}
+
 .row {
     width: 100%
 }
@@ -14,51 +21,51 @@
 
 }
 
-.column.whole {
+.whole {
     width: 100%;
 
 }
 
-.column.one-half {
+.one-half {
     width: 50%;
 
 
 }
 
 
-.column.one-third {
+.one-third {
     width: 33%;
 
 
 
 }
 
-.column.two-thirds {
+.two-thirds {
     width: 66%;
 
 
 }
 
-.column.one-fourth {
+.one-fourth {
     width: 25%;
 
 
 
 }
 
-.column.one-sixth {
+.one-sixth {
     width: 16.66%;
 
 
 }
 
-.column.one-eighth {
+.one-eighth {
     width: 12.5%;
 
 
 }
 
-}
+
 
 
 /* ----- OFFSETTING: ----- */
