--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,7 @@
 }
 
 
+
 .white-background {
     text-align: center;
     background: white;
@@ -18,10 +19,12 @@
 
 .container {
     border-radius: 4px;
+    width: 100%;
+    margin-left: 10%;
 }
 
 h1 {
-    color: black
+    color: black;
     opacity: 1.0;
     background: white;
     position: absolute;
@@ -33,8 +36,18 @@ h1 {
 .log-in-head {
     height: 40px;
     width: 50px;
+    margin-right: 80px;
+    margin-top: 5px;
+    padding: 0;
 
 }
+
+.sign-up {
+    margin-right: -140px;
+    float: right;
+
+}
+
 
 img {
     height: 200px;
@@ -84,11 +97,13 @@ span {
     border-radius: 4px;
     padding: .3em;
 
+
 }
 
 
-
-
+.search-store {
+    margin-left: auto;
+}
 
 
 
@@ -118,10 +133,14 @@ span {
     color: black;
     font-size: 1.5em;
     text-decoration: none;
+
 }
 
-/*.btn-group.btn-group-toggle {*/
-    /*background: dodgerblue;*/
-    /*color: white;*/
-    /*border-radius: 4px;*/
-/*}*/
+.left-align {
+    margin-left: -100px;
+}
+
+footer {
+    border: .5px solid lightgray;
+    background-color: #eaeef9;
+}
