--- a/css/flower-order-css.css
+++ b/css/flower-order-css.css
@@ -25,7 +25,7 @@
 
 img {
     position: relative;
-    opacity: .85;
+    opacity: .8;
 }
 
 .fancy-header {
@@ -35,8 +35,8 @@ img {
     width: 50%;
     padding: .2em;
     background: #b2dfdb;
-    /*opacity: .7;*/
-    z-index: 4;
+    opacity: .85;
+    z-index: 100;
 }
 
 .quote-box {
@@ -46,8 +46,9 @@ img {
     width: 33%;
     padding: 1em;
     background: #b2dfdb;
-    /*opacity: .7;*/
+    opacity: .85;
     z-index: 4;
+
 }
 
 
@@ -59,6 +60,7 @@ img {
     float: left;
     margin: 0 auto;
     position: absolute;
+    z-index: 5;
 }
 
 .p-container-2 {
@@ -69,6 +71,7 @@ img {
     float: left;
     margin: 0 auto;
     position: absolute;
+    z-index: 5;
 }
 
 
@@ -81,6 +84,7 @@ img {
     margin: 0 auto;
     position: absolute;
     font-weight: bold;
+    z-index: 5;
 }
 
 
@@ -110,15 +114,54 @@ main {
 }
 
 .logo {
-    width: 150px;
+    box-sizing: content-box;
+    width: 170px;
+    position: absolute;
+    opacity: 1;
+    z-index: 300;
+    padding: 0 1em 1em 1em 1em;
+    left: 1.3em;
 }
 
+.logo-background {
+    height: 50em;
+    width: 250px;
+    background-color: papayawhip;
+    opacity: .6;
+    position: absolute;
+    z-index: 5;
+    left: 30px;
+}
 
 .floating-logo {
     width: 300px;
     position: absolute;
-    top: 680px;
-    margin-left: 370px;
+    top: 860px;
+    margin-left: 270px;
+    z-index: 1000;
+    opacity: 1.0;
+
+}
+
+.floating-logo-background {
     background-color: papayawhip;
+    width: 100%;
+    height: 200px;
+    top: 832px;
+    float: left;
+    z-index: 150;
     opacity: .6;
+    position: absolute;
+    left: 20%;
+}
+
+.mid-paragraph {
+    left: 69%;
+    top: 61em;
+    width: 25%;
+    text-align: justify;
+    float: left;
+    margin: 0 auto;
+    position: absolute;
+    z-index: 500;
 }
